# KBT_VTOL_PX4_v1.14

./: .gitignore  .gitmodules
ROMFS/px4fmu_common/init.d/: rc.mc_apps  rc.vtol_apps  rc.vtol_apps.txt
ROMFS/px4fmu_common/init.d-posix/airframes/: 4001_gz_x500  4100_gz_tailsitter  4101_gz_tailsitter_L1  4101_gz_tailsitter_L1.txt  4101_gz_tailsitter_L1_2之前能用的.txt  CMakeLists.txt
Tools/simulation/gz/models/tailsitter/: model.sdf  model_raw.sdf
Tools/simulation/gz/models/tailsitter_L1/: model.config  model.sdf  model.txt
Tools/simulation/gz/models/tailsitter（复件）/: model.sdf
Tools/simulation/gz/models/x500/: model.sdf
VTOL-gz-simulation/: CMakeLists.txt  package.xml
VTOL-gz-simulation/include/: AerodynamicsPlugin.hh
VTOL-gz-simulation/models/tailsitter/: model.sdf
VTOL-gz-simulation/src/: AerodynamicsPlugin.cc  run_pub_f.cpp  run_pub_f_with_wind.cpp
VTOL-gz-simulation/src/MatlabGenerated/Zhang/: Aerodynamics.cpp  Aerodynamics_terminate.cpp  Aerodynamics_terminate.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
VTOL-gz-simulation/src/MatlabGenerated/Zhang/include/Zhang/: Aerodynamics.h
VTOL-gz-simulation/src/MatlabGenerated/testZhang/: main.cpp  main.h
boards/hkust/nxt-dual/: default.px4board
boards/px4/fmu-v6x/: default.px4board
boards/px4/sitl/: default.px4board
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
src/lib/npfg/: npfg.txt
src/lib/wind_estimator/: WindEstimator.cpp  WindEstimator.hpp
src/modules/airspeed_selector/: airspeed_selector_main.cpp
src/modules/commander/: Commander.cpp
src/modules/commander/HealthAndArmingChecks/: Common.cpp
src/modules/commander/ModeUtil/: control_mode.cpp
src/modules/flight_mode_manager/: FlightModeManager.cpp
src/modules/fw_pos_control/: FixedwingPositionControl.hpp  FixedwingPositionControl_back.txt
src/modules/fw_rate_control/: FixedwingRateControl.cpp
src/modules/logger/: logged_topics.cpp
src/modules/manual_control/: ManualControl.cpp
src/modules/mavlink/: CMakeLists.txt  mavlink_main.cpp  mavlink_messages.cpp  mavlink_receiver.cpp  mavlink_receiver.h
src/modules/mavlink/mavlink/message_definitions/v1.0/: common.xml
src/modules/mavlink/mavlink/pymavlink/dialects/v10/: ASLUAV.py  AVSSUAS.py  all.py  ardupilotmega.py  common.py  common.xml  development.py  minimal.py  python_array_test.py  storm32.py  uAvionix.py  ualberta.py
src/modules/mavlink/mavlink/pymavlink/dialects/v10/python2/: minimal.py  paparazzi.py  standard.py
src/modules/mavlink/mavlink/pymavlink/dialects/v20/: development.py  matrixpilot.py  paparazzi.py  python_array_test.py  storm32.py
src/modules/mavlink/mavlink/pymavlink/dialects/v20/python2/: ASLUAV.py  all.py  ardupilotmega.py  common.py  cubepilot.py  storm32.py  uAvionix.py
src/modules/mavlink/mavlink/pymavlink/pymavlink.egg-info/: PKG-INFO  SOURCES.txt
src/modules/mavlink/streams/: ACC.hpp
src/modules/mc_att_control/: mc_att_control_main.cpp
src/modules/mc_rate_control/: MulticopterRateControl.cpp
src/modules/sensors/: sensors.cpp  sensors.hpp
src/modules/sensors/vehicle_angular_velocity/: VehicleAngularVelocity.cpp  VehicleAngularVelocity.hpp  imu_gyro_parameters.c
src/modules/simulation/sensor_airspeed_sim/: SensorAirspeedSim.cpp
src/modules/simulation/simulator_mavlink/: CMakeLists.txt
src/modules/thrust_acc_control/: ThrustAccControl.cpp  ThrustAccControl.hpp  thrust_acc_control_params.c
src/modules/uxrce_dds_client/: dds_topics.yaml
src/modules/vtol_att_control/: tailsitter.cpp  tailsitter.h  vtol_att_control_main.cpp  vtol_type.cpp
wind_sim/: .gitignore  CMakeLists.txt  README.md  package.xml  wind.csv
wind_sim/include/: windPlugin.hh
wind_sim/models/tailsitter/: model.config  model.sdf  model_noyaw.sdf
wind_sim/src/: run_ros_main.cpp  windPlugin.cc
