<package >
  <name>windPlugin</name>
  <version>1.3.0</version>
  <description>
    Gazebo plugins for simulating Unmanned Surface Vehicles
    Originaly copied from https://github.com/bsb808/usv_gazebo_plugins
  </description>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/usv_gazebo_plugins</url>
  <url type="bugtracker">http://github.com/osrf/vrx/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation  </build_depend>
  <build_depend>geometry_msgs</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime   </run_depend>

  <!-- <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>

  <exec_depend>message_runtime</exec_depend> -->

</package>